# Django-GraphQL-Example

./: LICENSE  NOTES.md  README.md  pyproject.toml
django/: schema.json
django/book_app/: admin.py  models.py
django/book_app/migrations/: 0001_initial.py
django/core/: settings.py  urls.py  wsgi.py
django/graphql_api/: schema.py
