[tool.poetry]
name = "django-graphql-example"
version = "0.1.0"
description = ""
authors = ["Joa Riski <riski.joa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2"
graphene-django = "^2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
